2008-07-26  Carsten Dominik  <dominik@science.uva.nl>

	* org-exp.el (org-export-html-style)
	(org-export-html-style-extra): Declare as safe-local-variable.

2008-07-25  Carsten Dominik  <dominik@science.uva.nl>

	* org-publish.el (org-publish-file): Use the true name of the
	file.

	* org-jsinfo.el (org-infojs-handle-options): Use :style-extra
	instead of :style.

	* org-exp.el (org-export-plist-vars)
	(org-export-add-options-to-plist): Handle creator setting flag.
	(org-export-as-html): Handle attributes also for ftp and mailto
	links.

	* org-agenda.el (org-agenda-diary-entry)
	(org-agenda-execute-calendar-command): Cater for the second
	argument of `calendar-cursor-to-date'.

2008-07-24  Carsten Dominik  <dominik@science.uva.nl>

	* org-exp.el (org-export-region-as-html, org-export-as-html): Make
	sure that calls from `org-export-region-as-html' do not do the
	special check for a subtree.

	* org-agenda.el (org-batch-store-agenda-views): Fix parsing bug.

	* org.el (org-open-file): Use
	`org-open-directory-means-index-dot-org'.
	(org-open-directory-means-index-dot-org): New option.

	* org.el (org-make-link-string): Remove link attributes from
	description.
	(org-open-at-point): Remove link attributes bevore using the path.

	* org-exp.el (org-export-as-html): Handle link attributes.

	* org.el (org-extract-attributes, org-attributes-to-string): New functions.

	* org-table.el (org-table-to-lisp): New function.

	* org.el (org-narrow-to-subtree): Do not include the final newline
	into the narrowed region.

	* org-agenda.el (org-agenda-custom-commands-local-options): Fixed
	bug with user-define skipping condition.

	* org-agenda.el (org-agenda-get-restriction-and-command): Fixed typo.

	* org-exp.el (org-export-html-style-default): Automatic overflow
	handling for pre fields.
	(org-export-as-ascii, org-export-as-html): Change default format
	for time stamp.

	* org-table.el (org-table-export): Offer completion for translator